Language_Theory_and_Compilers/10th/complex.output
Grammar

    0 $accept: statement_list $end

    1 statement_list: statement
    2               | statement statement_list

    3 statement: exp SEMICOLON
    4          | error SEMICOLON

    5 exp: exp PLUS term
    6    | exp HYPHEN term
    7    | term

    8 term: term ASTERISK factor
    9     | term SLASH factor
   10     | factor

   11 factor: NUM
   12       | IMAGINARY
   13       | OPENPAREN exp CLOSEPAREN
   14       | OPENBRACKET exp COMMA exp CLOSEBRACKET
   15       | OPENBRACKET exp COMMA exp CLOSEBRACKET NUM
   16       | OPENBRACKET exp COMMA exp CLOSEBRACKET IMAGINARY
   17       | OPENBRACKET exp COMMA exp CLOSEBRACKET IMAGINARYUNIT
   18       | HYPHEN factor
   19       | IMAGINARYUNIT


Terminals, with rules where they appear

$end (0) 0
error (256) 4
NUM (258) 11 15
IMAGINARY (259) 12 16
PLUS (260) 5
HYPHEN (261) 6 18
ASTERISK (262) 8
SLASH (263) 9
SEMICOLON (264) 3 4
OPENPAREN (265) 13
CLOSEPAREN (266) 13
OPENBRACKET (267) 14 15 16 17
CLOSEBRACKET (268) 14 15 16 17
COMMA (269) 14 15 16 17
IMAGINARYUNIT (270) 17 19


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
statement_list (17)
    on left: 1 2, on right: 0 2
statement (18)
    on left: 3 4, on right: 1 2
exp (19)
    on left: 5 6 7, on right: 3 5 6 13 14 15 16 17
term (20)
    on left: 8 9 10, on right: 5 6 7 8 9
factor (21)
    on left: 11 12 13 14 15 16 17 18 19, on right: 8 9 10 18


state 0

    0 $accept: . statement_list $end

    error          shift, and go to state 1
    NUM            shift, and go to state 2
    IMAGINARY      shift, and go to state 3
    HYPHEN         shift, and go to state 4
    OPENPAREN      shift, and go to state 5
    OPENBRACKET    shift, and go to state 6
    IMAGINARYUNIT  shift, and go to state 7

    statement_list  go to state 8
    statement       go to state 9
    exp             go to state 10
    term            go to state 11
    factor          go to state 12


state 1

    4 statement: error . SEMICOLON

    SEMICOLON  shift, and go to state 13


state 2

   11 factor: NUM .

    $default  reduce using rule 11 (factor)


state 3

   12 factor: IMAGINARY .

    $default  reduce using rule 12 (factor)


state 4

   18 factor: HYPHEN . factor

    NUM            shift, and go to state 2
    IMAGINARY      shift, and go to state 3
    HYPHEN         shift, and go to state 4
    OPENPAREN      shift, and go to state 5
    OPENBRACKET    shift, and go to state 6
    IMAGINARYUNIT  shift, and go to state 7

    factor  go to state 14


state 5

   13 factor: OPENPAREN . exp CLOSEPAREN

    NUM            shift, and go to state 2
    IMAGINARY      shift, and go to state 3
    HYPHEN         shift, and go to state 4
    OPENPAREN      shift, and go to state 5
    OPENBRACKET    shift, and go to state 6
    IMAGINARYUNIT  shift, and go to state 7

    exp     go to state 15
    term    go to state 11
    factor  go to state 12


state 6

   14 factor: OPENBRACKET . exp COMMA exp CLOSEBRACKET
   15       | OPENBRACKET . exp COMMA exp CLOSEBRACKET NUM
   16       | OPENBRACKET . exp COMMA exp CLOSEBRACKET IMAGINARY
   17       | OPENBRACKET . exp COMMA exp CLOSEBRACKET IMAGINARYUNIT

    NUM            shift, and go to state 2
    IMAGINARY      shift, and go to state 3
    HYPHEN         shift, and go to state 4
    OPENPAREN      shift, and go to state 5
    OPENBRACKET    shift, and go to state 6
    IMAGINARYUNIT  shift, and go to state 7

    exp     go to state 16
    term    go to state 11
    factor  go to state 12


state 7

   19 factor: IMAGINARYUNIT .

    $default  reduce using rule 19 (factor)


state 8

    0 $accept: statement_list . $end

    $end  shift, and go to state 17


state 9

    1 statement_list: statement .
    2               | statement . statement_list

    error          shift, and go to state 1
    NUM            shift, and go to state 2
    IMAGINARY      shift, and go to state 3
    HYPHEN         shift, and go to state 4
    OPENPAREN      shift, and go to state 5
    OPENBRACKET    shift, and go to state 6
    IMAGINARYUNIT  shift, and go to state 7

    $end  reduce using rule 1 (statement_list)

    statement_list  go to state 18
    statement       go to state 9
    exp             go to state 10
    term            go to state 11
    factor          go to state 12


state 10

    3 statement: exp . SEMICOLON
    5 exp: exp . PLUS term
    6    | exp . HYPHEN term

    PLUS       shift, and go to state 19
    HYPHEN     shift, and go to state 20
    SEMICOLON  shift, and go to state 21


state 11

    7 exp: term .
    8 term: term . ASTERISK factor
    9     | term . SLASH factor

    ASTERISK  shift, and go to state 22
    SLASH     shift, and go to state 23

    $default  reduce using rule 7 (exp)


state 12

   10 term: factor .

    $default  reduce using rule 10 (term)


state 13

    4 statement: error SEMICOLON .

    $default  reduce using rule 4 (statement)


state 14

   18 factor: HYPHEN factor .

    $default  reduce using rule 18 (factor)


state 15

    5 exp: exp . PLUS term
    6    | exp . HYPHEN term
   13 factor: OPENPAREN exp . CLOSEPAREN

    PLUS        shift, and go to state 19
    HYPHEN      shift, and go to state 20
    CLOSEPAREN  shift, and go to state 24


state 16

    5 exp: exp . PLUS term
    6    | exp . HYPHEN term
   14 factor: OPENBRACKET exp . COMMA exp CLOSEBRACKET
   15       | OPENBRACKET exp . COMMA exp CLOSEBRACKET NUM
   16       | OPENBRACKET exp . COMMA exp CLOSEBRACKET IMAGINARY
   17       | OPENBRACKET exp . COMMA exp CLOSEBRACKET IMAGINARYUNIT

    PLUS    shift, and go to state 19
    HYPHEN  shift, and go to state 20
    COMMA   shift, and go to state 25


state 17

    0 $accept: statement_list $end .

    $default  accept


state 18

    2 statement_list: statement statement_list .

    $default  reduce using rule 2 (statement_list)


state 19

    5 exp: exp PLUS . term

    NUM            shift, and go to state 2
    IMAGINARY      shift, and go to state 3
    HYPHEN         shift, and go to state 4
    OPENPAREN      shift, and go to state 5
    OPENBRACKET    shift, and go to state 6
    IMAGINARYUNIT  shift, and go to state 7

    term    go to state 26
    factor  go to state 12


state 20

    6 exp: exp HYPHEN . term

    NUM            shift, and go to state 2
    IMAGINARY      shift, and go to state 3
    HYPHEN         shift, and go to state 4
    OPENPAREN      shift, and go to state 5
    OPENBRACKET    shift, and go to state 6
    IMAGINARYUNIT  shift, and go to state 7

    term    go to state 27
    factor  go to state 12


state 21

    3 statement: exp SEMICOLON .

    $default  reduce using rule 3 (statement)


state 22

    8 term: term ASTERISK . factor

    NUM            shift, and go to state 2
    IMAGINARY      shift, and go to state 3
    HYPHEN         shift, and go to state 4
    OPENPAREN      shift, and go to state 5
    OPENBRACKET    shift, and go to state 6
    IMAGINARYUNIT  shift, and go to state 7

    factor  go to state 28


state 23

    9 term: term SLASH . factor

    NUM            shift, and go to state 2
    IMAGINARY      shift, and go to state 3
    HYPHEN         shift, and go to state 4
    OPENPAREN      shift, and go to state 5
    OPENBRACKET    shift, and go to state 6
    IMAGINARYUNIT  shift, and go to state 7

    factor  go to state 29


state 24

   13 factor: OPENPAREN exp CLOSEPAREN .

    $default  reduce using rule 13 (factor)


state 25

   14 factor: OPENBRACKET exp COMMA . exp CLOSEBRACKET
   15       | OPENBRACKET exp COMMA . exp CLOSEBRACKET NUM
   16       | OPENBRACKET exp COMMA . exp CLOSEBRACKET IMAGINARY
   17       | OPENBRACKET exp COMMA . exp CLOSEBRACKET IMAGINARYUNIT

    NUM            shift, and go to state 2
    IMAGINARY      shift, and go to state 3
    HYPHEN         shift, and go to state 4
    OPENPAREN      shift, and go to state 5
    OPENBRACKET    shift, and go to state 6
    IMAGINARYUNIT  shift, and go to state 7

    exp     go to state 30
    term    go to state 11
    factor  go to state 12


state 26

    5 exp: exp PLUS term .
    8 term: term . ASTERISK factor
    9     | term . SLASH factor

    ASTERISK  shift, and go to state 22
    SLASH     shift, and go to state 23

    $default  reduce using rule 5 (exp)


state 27

    6 exp: exp HYPHEN term .
    8 term: term . ASTERISK factor
    9     | term . SLASH factor

    ASTERISK  shift, and go to state 22
    SLASH     shift, and go to state 23

    $default  reduce using rule 6 (exp)


state 28

    8 term: term ASTERISK factor .

    $default  reduce using rule 8 (term)


state 29

    9 term: term SLASH factor .

    $default  reduce using rule 9 (term)


state 30

    5 exp: exp . PLUS term
    6    | exp . HYPHEN term
   14 factor: OPENBRACKET exp COMMA exp . CLOSEBRACKET
   15       | OPENBRACKET exp COMMA exp . CLOSEBRACKET NUM
   16       | OPENBRACKET exp COMMA exp . CLOSEBRACKET IMAGINARY
   17       | OPENBRACKET exp COMMA exp . CLOSEBRACKET IMAGINARYUNIT

    PLUS          shift, and go to state 19
    HYPHEN        shift, and go to state 20
    CLOSEBRACKET  shift, and go to state 31


state 31

   14 factor: OPENBRACKET exp COMMA exp CLOSEBRACKET .
   15       | OPENBRACKET exp COMMA exp CLOSEBRACKET . NUM
   16       | OPENBRACKET exp COMMA exp CLOSEBRACKET . IMAGINARY
   17       | OPENBRACKET exp COMMA exp CLOSEBRACKET . IMAGINARYUNIT

    NUM            shift, and go to state 32
    IMAGINARY      shift, and go to state 33
    IMAGINARYUNIT  shift, and go to state 34

    $default  reduce using rule 14 (factor)


state 32

   15 factor: OPENBRACKET exp COMMA exp CLOSEBRACKET NUM .

    $default  reduce using rule 15 (factor)


state 33

   16 factor: OPENBRACKET exp COMMA exp CLOSEBRACKET IMAGINARY .

    $default  reduce using rule 16 (factor)


state 34

   17 factor: OPENBRACKET exp COMMA exp CLOSEBRACKET IMAGINARYUNIT .

    $default  reduce using rule 17 (factor)
